--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,48 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&display=swap");
+
 body   {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background: #edeef0;
     padding: 0 70px;
+}
+
+header {
+  background-image: url('https://rllngr.github.io/La-Toile-Jukebox-Code-Makers/assets/header.svg');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 250px;
+}
+
+nav {
+  font-family: "Poppins", sans-serif;
+  background: white;
+  padding-bottom: 10px;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  padding: 0;
+  margin: 0;
+}
+
+nav li a {
+  font-weight: bold;
+  color: #4b4b4b;
+}
+
+nav a {
+  text-decoration: none;
+  color: #4b4b4b;
+  transition: color 0.3s ease-in-out;
+}
+
+nav a:hover {
+  color: #e2001a;
 }
 
 h1 {
@@ -64,3 +105,13 @@ section{
 #autres img:hover  {
     opacity: 0.5;
 }
+
+footer {
+    background: #e2001a;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 400;
+    padding: 10px;
+  }
